--- a/Pages/Cars/Table.cshtml
+++ b/Pages/Cars/Table.cshtml
@@ -5,15 +5,15 @@
     ViewData["Title"] = "Cars";
 }
 
-<h1 style="padding-top:20px;">Cars Shop</h1>
+<h1 style="padding-top:20px; color: white;">Cars Shop</h1>
 
 
 <div class="cars-container">
     @foreach (var car in Model.Car)
     {
         <div class="car-card">
-            <div class="FatImageCentre">
-                <img src="@car.CarPicURL" alt="Car Image" class="@car.CarModel Image" style="width: 300px; height: 300px; object-fit: contain;"/>
+            <div class="car-image-container" style="background-color: white; border-radius: 15px; padding: 10px; display: inline-block;">
+                <img src="@car.CarPicURL" alt="Car Image" class="car-image" style="width: 300px; height: 300px; object-fit: contain; border-radius: 10px;"/>
             </div>
             <div class="car-info">
                 <h2>@Html.DisplayFor(modelItem => car.CarName)</h2>
@@ -25,6 +25,6 @@
                     <button class="buy-btn" onclick="location.href='/Marketplace'">Buy Now</button>
                 </div>
             </div>
-        </div>
+        </div>   
     }
 </div>
