--- a/Pages/Error.cshtml
+++ b/Pages/Error.cshtml
@@ -1,26 +1,22 @@
 ﻿@page
 @model ErrorModel
 @{
+    ViewData["IsErrorPage"] = true;
     ViewData["Title"] = "Error";
 }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
-
-@if (Model.ShowRequestId)
-{
-    <p>
-        <strong>Request ID:</strong> <code>@Model.RequestId</code>
-    </p>
-}
-
-<h3>Development Mode</h3>
-<p>
-    Swapping to the <strong>Development</strong> environment displays detailed information about the error that occurred.
-</p>
-<p>
-    <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
-    It can result in displaying sensitive information from exceptions to end users.
-    For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
-    and restarting the app.
-</p>
+<div style="padding-top: 150px;"> 
+    <div class="access-denied-container">
+        <h1 class="text-danger">Error 403: Forbidden</h1>
+        <h2 class="text-danger">Admin Access Denied</h2>
+        <p>You do not have permission to view this page. Please contact your administrator if you believe this is an error.</p>
+        
+        @if (Model.ShowRequestId)
+        {
+            <p class>
+                <strong>Request ID:</strong> <code class="text-danger">@Model.RequestId</code>
+            </p>
+        }
+        <a class="btn btn-danger" asp-page="/Index">GO AWAY</a>
+    </div>
+</div>
